packages/react-server/examples/basic/src/routes/test/error/browser/page.tsx
import { ClinetPage } from "./_client";

export default function Page() {
  return <ClinetPage />;
}
